# pasimple

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: README.md  echo.py  play.py  record.py
pasimple/: __init__.py  exceptions.py  pa_simple.py
