[metadata]
name = pasimple
version = 0.0.1
author = Henrik Schnor
author_email = hschnor@mailbox.org
url = https://github.com/henrikschnor/pasimple
description = PulseAudio "simple API" wrapper. Play/record audio via PulseAudio/PipeWire.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pulseaudio, pulse, pipewire, audio, recording, playback, play
license = MIT
license_file = LICENSE
platform = posix
classifiers =
    Programming Language :: Python :: 3

[options]
packages = pasimple
